--- a/src/app/directives/admin/delete-directive/delete-directive.component.scss
+++ b/src/app/directives/admin/delete-directive/delete-directive.component.scss
@@ -1,60 +1,4 @@
-.button_delete {
-    position: relative;
-    width: 60px;
-    height: 25px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #cc0000;
-    background-color: #f95757;
-    overflow: hidden;
-  }
-  
-  .button_delete, .button_delete__icon, .button_delete__text {
-    transition: all 0.3s;
-  }
-  
-  .button_delete .button_delete__text {
-    transform: translateX(1px);
-    color: #fff;
-    font-weight: 600;
-    font-size: 13px;
-  }
-  
-  .button_delete .button_delete__icon {
-    position: absolute;
-    transform: translateX(124px);
-    height: 100%;
-    width: 19px;
-    background-color: #cc0000;
-    display: flex;
-    align-items: center;
-    justify-content:center;
-  }
-  
-  .button_delete .svg {
-    width: 20px;
-    stroke: #fff;
-  }
-  
-  .button_delete:hover {
-    background: #cc0000;
-  }
-  
-  .button_delete:hover .button_delete__text {
-    color: transparent;
-  }
-  
-  .button_delete:hover .button_delete__icon {
-    width: 100%;
-    transform: translateX(0);
-  }
-  
-  .button_delete:active .button_delete__icon {
-    background-color: #b20000;
-  }
-  
-  .button_delete:active {
-    border: 1px solid #b20000;
-  }
+.delete-button {
+  background-color: #dc3545 !important;
+  color: #fff;
+}
