--- a/src/app/admin/components/brands/brand-list/brand-list.component.scss
+++ b/src/app/admin/components/brands/brand-list/brand-list.component.scss
@@ -1,39 +1,3 @@
-::ng-deep .mat-mdc-paginator-outer-container {
-  background-color: #1d1c1c;
-  color: white;
-  border-radius: 30px;
-  border: 5px solid #185bc3;
-}
-
-.mat-mdc-header-cell {
-  background-color: #007bff !important;
-  color: #fff !important;
-  text-align: center;
-  font-size: 1.1rem;
-  padding: 10px;
-}
-
-::ng-deep .mat-mdc-paginator-range-actions {
-  background-color: #185bc3;
-  border-radius: 30px;
-}
-
-::ng-deep .mat-mdc-select-trigger {
-  background-color: rgb(24, 93, 195);
-  border-radius: 30px;
-}
-::ng-deep .mat-mdc-select-value-text {
-  color: white;
-  margin-left: 5px;
-}
-
-::ng-deep .mat-mdc-select-arrow {
-  margin-right: 5px;
-}
-::ng-deep .mat-mdc-select-arrow svg {
-  color: white;
-}
-
 .container {
   background-color: #f8f9fa;
   padding: 30px;
@@ -59,7 +23,7 @@
 }
 
 .mat-mdc-cell {
-  text-align: -webkit-center;
+  text-align: center;
   align-content: center;
 }
 
@@ -85,8 +49,6 @@
   border-collapse: separate;
 }
 
-
-
 .mat-row {
   transition: background-color 0.3s;
 }
@@ -95,13 +57,69 @@
   background-color: #f1f1f1;
 }
 
-.app-delete-directive-container {
+.app-delete-directive-container,
+.updateButton {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px; /* Padding'i sadece container'a uyguluyoruz */
+  padding: 10px;
 }
 
 .app-delete-directive-container button {
   margin: 0;
 }
+
+
+
+.search-and-table-container mat-form-field,
+.search-and-table-container table {
+  width: 100%;
+}
+
+::ng-deep .mat-mdc-form-field-infix {
+  display: flex;
+}
+
+
+.mat-mdc-select-arrow {
+  margin-right: 5px;
+}
+
+.mat-mdc-select-arrow svg {
+  color: white;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .page-title {
+    font-size: 2rem;
+  }
+  
+  .page-description {
+    font-size: 1rem;
+  }
+
+  .search-and-table-container mat-form-field,
+  .search-and-table-container table {
+    width: 100%;
+  }
+
+  .updateButton,
+  .app-delete-directive-container {
+    padding: 5px;
+  }
+
+}
+
+@media (max-width: 576px) {
+  .page-title {
+    font-size: 1.5rem;
+  }
+  
+  .page-description {
+    font-size: 0.9rem;
+  }
+}
+
+
+
