--- a/src/app/dialogs/brandDialogs/brandcreateconfrim-dialog/brandcreateconfrim-dialog.component.html
+++ b/src/app/dialogs/brandDialogs/brandcreateconfrim-dialog/brandcreateconfrim-dialog.component.html
@@ -3,5 +3,5 @@
   <h2>{{data.name}}</h2> Markasını eklemek istiyor musunuz?</div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Hayır</button>
-  <button mat-raised-button style="background-color: green; color: aliceblue;" [mat-dialog-close]="true" cdkFocusInitial>Evet</button>
+  <button mat-raised-button class="confirm-button" [mat-dialog-close]="true" cdkFocusInitial>Evet</button>
 </div>
