--- a/src/app/dialogs/delete-dialog/delete-dialog.component.html
+++ b/src/app/dialogs/delete-dialog/delete-dialog.component.html
@@ -1,8 +1,10 @@
-<h1 mat-dialog-title>Dikkat !</h1>
-<div mat-dialog-content>
-  <p>Silmek istediğinize emin misiniz?</p>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="close()">İptal</button>
-  <button mat-raised-button style="background-color: green; color: aliceblue;" [mat-dialog-close]="data" cdkFocusInitial>Sil</button>
+<div class="delete-dialog-container">
+  <h1 mat-dialog-title>Dikkat !</h1>
+  <div mat-dialog-content>
+    <p>Silmek istediğinize emin misiniz?</p>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-button (click)="close()">İptal</button>
+    <button mat-raised-button class="delete-button-submit" [mat-dialog-close]="data" cdkFocusInitial>Sil</button>
+  </div>
 </div>
