--- a/src/app/admin/components/features/feature-create/feature-create.component.html
+++ b/src/app/admin/components/features/feature-create/feature-create.component.html
@@ -15,6 +15,16 @@
       </div>
 
       <div class="form-row">
+        <mat-form-field appearance="outline" class="full-width">
+          <mat-label>Özellik Değeri</mat-label>
+          <input matInput formControlName="featureValue" placeholder="Özellik Değeri">
+          <mat-error *ngIf="featureForm.get('featureValue').hasError('required')">
+            Özellik değeri zorunludur
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="form-row">
         <div class="category-section">
           <h3>Kategorileri Kontrol Et</h3>
           <mat-form-field appearance="outline" class="full-width">
