--- a/src/app/admin/components/featurevalues/featurevalue-list/featurevalue-list.component.html
+++ b/src/app/admin/components/featurevalues/featurevalue-list/featurevalue-list.component.html
@@ -29,6 +29,17 @@
             <th mat-header-cell *matHeaderCellDef class="header-cell">Özellik Değeri</th>
             <td mat-cell *matCellDef="let item">{{ item.name }}</td>
           </ng-container>
+
+          <ng-container matColumnDef="Update">
+            <th mat-header-cell *matHeaderCellDef class="header-cell">Güncelle</th>
+            <td mat-cell *matCellDef="let item">
+              <a [routerLink]="['/admin/featurevalues/featurevalue-update', item.id]">
+                <button mat-mini-fab class="edit-button-list">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </a>
+            </td>
+          </ng-container>
   
           <ng-container matColumnDef="Delete">
             <th mat-header-cell *matHeaderCellDef class="header-cell">Sil</th>
