--- a/src/app/admin/components/products/product-create/product-create.component.html
+++ b/src/app/admin/components/products/product-create/product-create.component.html
@@ -90,10 +90,16 @@
     <div *ngIf="variantsCreated" class="variants-table full-width">
       <h3>Varyantlar</h3>
       
-      <table mat-table [dataSource]="variants.controls" class="mat-elevation-z8">
+      <div class="full-width">
+        <button mat-stroked-button color="warn" type="button" (click)="removeSelectedVariants()">
+          Seçili Varyantları Sil
+        </button>
+      </div>
+      
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="select">
           <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? toggleAllSelection() : null"
+            <mat-checkbox (change)="toggleAllSelection()"
                           [checked]="allSelected">
             </mat-checkbox>
           </th>
@@ -111,30 +117,27 @@
     
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef> Fiyat </th>
-          <td mat-cell *matCellDef="let variant; let i = index">
+          <td mat-cell *matCellDef="let variant">
             <mat-form-field appearance="outline">
-              <input matInput type="number" [formControl]="variant.get('price')"
-                     (input)="updateSelectedVariants($event, 'price', i)">
+              <input matInput type="number" [formControl]="variant.get('price')">
             </mat-form-field>
           </td>
         </ng-container>
         
         <ng-container matColumnDef="stock">
           <th mat-header-cell *matHeaderCellDef> Stok </th>
-          <td mat-cell *matCellDef="let variant; let i = index">
+          <td mat-cell *matCellDef="let variant">
             <mat-form-field appearance="outline">
-              <input matInput type="number" [formControl]="variant.get('stock')"
-                     (input)="updateSelectedVariants($event, 'stock', i)">
+              <input matInput type="number" [formControl]="variant.get('stock')">
             </mat-form-field>
           </td>
         </ng-container>
         
         <ng-container matColumnDef="sku">
           <th mat-header-cell *matHeaderCellDef> SKU </th>
-          <td mat-cell *matCellDef="let variant; let i = index">
+          <td mat-cell *matCellDef="let variant">
             <mat-form-field appearance="outline">
-              <input matInput [formControl]="variant.get('sku')"
-                     (input)="updateSelectedVariants($event, 'sku', i)">
+              <input matInput [formControl]="variant.get('sku')">
             </mat-form-field>
           </td>
         </ng-container>
@@ -142,7 +145,7 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> İşlemler </th>
           <td mat-cell *matCellDef="let variant; let i = index">
-            <button mat-icon-button color="warn" >
+            <button mat-icon-button color="warn" type="button" (click)="removeVariant(i)">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
@@ -152,10 +155,9 @@
         <tr mat-row *matRowDef="let row; columns: variantColumns;"></tr>
       </table>
     </div>
-    
-
+  
     <button mat-raised-button color="primary" type="submit" [disabled]="!productForm.valid || !variantsCreated">
       <mat-icon>save</mat-icon> {{ buttonText }}
     </button>
   </form>
-</div>
+  </div>
